--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   share_plus: ^10.1.4
   fluttertoast: ^8.2.12
   image_picker: ^1.1.2
+  table_calendar: ^3.2.0
+  im_stepper: ^1.0.1+1
+  easy_stepper: ^0.8.5+1
+  shared_preferences: ^2.5.3
+
 
 dev_dependencies:
   flutter_test:
